# benchflow

./: .gitignore  LICENSE  README.md  backlog.md  pyproject.toml  requirements.txt  ruff.toml
src/: BaseAgent.py  BenchClient.py  load_benchmark.py
src/benchflow/: BaseAgent.py  BaseBench.py  Bench.py  BenchClient.py  BenchNew.py  __init__.py  load_benchmark.py
src/benchflow/agents/: crag_openai.py  mmlu_openai.py  swebench_sweagent.py  taubench_openai.py  webarena_langbase.py  webarena_openai.py  webcanvas_langbase.py  webcanvas_openai.py
src/benchflow/benchmark_clients/crag/: client.py
src/benchflow/benchmarks/: __init__.py  crag.py  mmlupro.py  swebench.py  taubench.py  webarena.py  webcanvas.py
src/benchflow/docker/crag/: .gitignore  Dockerfile  run.py  swebench_run.py  webarena_run.py
src/benchflow/schemas/: BenchArgs.py  BenchConfig.py  BenchmarkResults.py  InputData.py  __init__.py
src/benchmarks/: __init__.py  webcanvas.py
tau_bench/: Dockerfile  README.md  entrypoint.py  requirements.txt
tests/: crag_requirements.txt  install_sweagent.sh  langbase.py  mmlupro_requirements.txt  swe_agent.py  sweagent_requirements.txt  test_bench.py  test_crag.py  test_mmlu.py  test_swebench.py  test_taubench.py  test_webarena.py  test_webcanvas.py  webarena_openai.py  webarena_requirements.txt  webcanvas_langbase.py  webcanvas_openai.py  webcanvas_requirements.txt
