[project]
name = "benchflow"
version = "0.1.1"
description = "A tool for easy benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "json5>=0.10.0",
    "openai>=1.60.0",
    "requests>=2.32.3",
    "ruff>=0.9.2",
    "uvicorn>=0.34.0",
]
authors = [
    { name = "Hongji Xu", email = "kirk@benchflow.ai" },
    { name = "Xiangyi Li", email = "xiangyi@benchflow.ai" },
]

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/benchflow-ai/benchflow"
"Bug Tracker" = "https://github.com/benchflow-ai/benchflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
