[project]
name = "benchflow"
version = "0.1.8"
description = "A tool for easy benchmarking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "docker>=6.0.0",
    "fastapi>=0.100.0",
    "jinja2>=3.0.0",
    "json5>=0.9.15",
    "openai>=1.0.0",
    "requests>=2.30.0",
    "ruff>=0.7.0",
    "uvicorn>=0.24.0",
]
authors = [
    { name = "Hongji Xu", email = "kirk@benchflow.ai" },
    { name = "Xiangyi Li", email = "xiangyi@benchflow.ai" },
]

maintainers = [
    { name = "Hongji Xu", email = "kirk@benchflow.ai" },
    { name = "Xiangyi Li", email = "xiangyi@benchflow.ai" },
]

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/benchflow-ai/benchflow"
"Bug Tracker" = "https://github.com/benchflow-ai/benchflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
